Use getFooterBlock instead of getFooter to avoid weird overflows on mobile
Apparently getFooterBlock never actually made it into core, so copied
out of Example.

Bug: T254266

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -168,15 +168,11 @@ body {
 	.footer-icons {
 		float: right;
 		margin: 0 0 0 1em;
-
-		li {
-			margin: 0 0 1em 0;
-		}
 	}
 
-	.footer-places li {
-		display: inline;
-		padding-right: 1em;
+	#footer-places li {
+		display: inline-block;
+		margin: 0 1em 0 0;
 	}
 
 	#lastmod,
