--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -10,6 +10,11 @@
 	padding: 0 @content-padding;
 }
 
+#mw-footer .footer-icons {
+	clear: both;
+	margin-bottom: 0.5em;
+}
+
 .color-middle {
 	margin: auto;
 	width: 34%;
